--- a/config
+++ b/config
@@ -23,6 +23,7 @@ include /etc/sway/config-vars.d/*
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg /usr/share/backgrounds/ubuntu-default-greyscale-wallpaper.png fill
+output HDMI-A-1 resolution 2560x1080
 #
 # Example configuration:
 #
@@ -47,18 +48,18 @@ exec swayidle -w \
 #
 # Example configuration:
 #
-input "1:1:AT_Translated_Set_2_keyboard" {
-    dwt enabled
-    tap enabled
-    natural_scroll enabled
-    middle_emulation enabled
+input type:keyboard {
     xkb_options "caps:escape_shifted_capslock"
 }
 input "type:touchpad" {
-    tap enabled
-    tap_button_map lrm
     dwt enabled
     dwtp enabled
+    natural_scroll enabled
+    tap enabled
+    tap_button_map lrm
+}
+input "type:pointer" {
+    natural_scroll enabled
 }
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
@@ -211,7 +212,7 @@ bar {
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+    status_command while date +'%Y-%m-%d %R'; do sleep 1; done
 
     colors {
         statusline #ffffff
