--- a/config
+++ b/config
@@ -15,7 +15,7 @@ set $term foot
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu dmenu_path | wmenu | xargs swaymsg exec --
+set $menu fuzzel | xargs swaymsg exec --
 
 include /etc/sway/config-vars.d/*
 
@@ -222,3 +222,9 @@ bar {
 }
 
 include /etc/sway/config.d/*
+
+#
+# Misc:
+#
+# remove title bar on windows
+default_border pixel 2
