--- a/config
+++ b/config
@@ -15,14 +15,18 @@ set $term foot
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu fuzzel | xargs swaymsg exec --
+# fuzzel
+# set $menu fuzzel | xargs swaymsg exec --
+set $menu fuzzel
+# wofi
+# set $menu wofi --show drun
 
 include /etc/sway/config-vars.d/*
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/ubuntu-default-greyscale-wallpaper.png fill
+output * bg /home/jordan/Pictures/nixos-wallpaper-01.png fill
 output HDMI-A-1 resolution 2560x1080
 #
 # Example configuration:
@@ -76,6 +80,7 @@ input "type:pointer" {
     bindsym $mod+Shift+q kill
 
     # Start your launcher
+    bindsym $mod+t exec fuzzel
     bindsym $mod+d exec $menu
 
     # Drag floating windows by holding down $mod and left mouse button.
@@ -141,6 +146,10 @@ input "type:pointer" {
     bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
+
+    # Touchpad swipe
+    bindgesture swipe:right workspace prev
+    bindgesture swipe:left workspace next
 #
 # Layout stuff:
 #
