--- a/config
+++ b/config
@@ -211,6 +211,11 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+# Volume control
+bindsym XF86AudioMute exec /usr/bin/wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindsym XF86AudioRaiseVolume exec /usr/bin/wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindsym XF86AudioLowerVolume exec /usr/bin/wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+
 #
 # Status Bar:
 #
