remove hard-coded path to nix-profile/bin

--- a/config
+++ b/config
@@ -11,7 +11,6 @@ set $down j
 set $up k
 set $right l
 
-set $nixpath /home/jordan/.nix-profile/bin
 # Your preferred terminal emulator
 set $term foot
 # Your preferred application launcher
@@ -19,7 +18,7 @@ set $term foot
 # on the original workspace that the command was run on.
 # fuzzel
 # set $menu fuzzel | xargs swaymsg exec --
-set $menu $nixpath/fuzzel
+set $menu fuzzel
 # wofi
 # set $menu wofi --show drun
 
@@ -224,8 +223,8 @@ bindsym XF86AudioRaiseVolume exec /usr/bin/wpctl set-volume @DEFAULT_AUDIO_SINK@
 bindsym XF86AudioLowerVolume exec /usr/bin/wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 
 # Brightness control
-bindsym XF86MonBrightnessUp exec $nixpath/brightnessctl set 10%+
-bindsym XF86MonBrightnessDown exec $nixpath/brightnessctl set 10%-
+bindsym XF86MonBrightnessUp exec brightnessctl set 10%+
+bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
 
 #
 # Status Bar:
@@ -237,7 +236,7 @@ bar {
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
     # status_command while date +'%Y-%m-%d %R'; do sleep 1; done
-    status_command $nixpath/i3status-rs /home/jordan/.config/i3status-rust/config-default.toml
+    status_command i3status-rs /home/jordan/.config/i3status-rust/config-default.toml
 
     colors {
         statusline #ffffff
@@ -253,10 +252,14 @@ include /etc/sway/config.d/*
 #
 #
 # udiskie daemon auto-mounts usb devices
-exec $nixpath/udiskie
+exec udiskie
 
 #
 # Misc:
 #
 # remove title bar on windows
 default_border pixel 2
+
+# set gaps around windows
+gaps inner 10
+gaps outer 10
