--- a/config
+++ b/config
@@ -97,7 +97,7 @@ input "type:pointer" {
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
     # Screenshot a region
-    bindsym Print exec grim -g "$(slurp)"
+    bindsym Print exec grim -g "$(slurp)" $(xdg-user-dir PICTURES)/Screenshots/$(date +'%Y-%m-%d_%H.%M.%S.png')
     # Screenshot the whole screen
     bindsym Shift+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')
 #
@@ -254,7 +254,7 @@ include /etc/sway/config.d/*
 # udiskie daemon auto-mounts usb devices
 exec udiskie
 
-# The following helps gnome-keyring start up with Sway
+# The following supposedly helps gnome-keyring start up with Sway
 # See section 6.8.1 of Arch Wiki
 # https://wiki.archlinux.org/title/GNOME/Keyring#Tips_and_tricks
 exec dbus-update-activation-environment --all
@@ -268,3 +268,12 @@ default_border pixel 2
 # set gaps around windows
 gaps inner 10
 gaps outer 10
+
+#
+# Systemd integration
+#
+# exec "systemctl --user import-environment {,WAYLAND_}DISPLAY SWAYSOCK; systemctl --user start sway-session.target"
+#
+# exec swaymsg -t subscribe '["shutdown"]' && systemctl --user stop sway-session.target
+#
+# exec systemd-cat --identifier=sway sway
