--- a/config
+++ b/config
@@ -28,7 +28,7 @@ include /etc/sway/config-vars.d/*
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg /home/jordan/Pictures/nix-bitcoin-logo-01-wide.png fill
-output eDP-1 scale 1.5
+output eDP-1 scale 1.0
 output HDMI-A-1 resolution 2560x1080
 #
 # Example configuration:
@@ -233,6 +233,7 @@ bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     position top
+    font pango:monospace 14
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
