--- a/config
+++ b/config
@@ -29,7 +29,10 @@ include /etc/sway/config-vars.d/*
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg /home/jordan/Pictures/nix-bitcoin-logo-01-wide.png fill
+# thinky screen
 output eDP-1 resolution 2880x1800@90Hz scale 1.5
+# tux screen
+# output eDP-1 resolution 2560x1600@90Hz scale 1.25
 output DP-1 resolution 3440x1440@144Hz scale 1.0
 output HDMI-A-1 resolution 2560x1080 scale 1.0
 #
