set terminal to kitty

--- a/config
+++ b/config
@@ -12,8 +12,8 @@ set $up k
 set $right l
 
 # Your preferred terminal emulator
-set $term nixGLIntel ghostty
-# set $term nixGLIntel kitty
+# set $term nixGLIntel ghostty
+set $term nixGLIntel kitty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
