--- a/config
+++ b/config
@@ -231,10 +231,14 @@ bindsym $mod+n mode "resize"
 bindsym XF86AudioMute exec /usr/bin/wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindsym XF86AudioRaiseVolume exec /usr/bin/wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
 bindsym XF86AudioLowerVolume exec /usr/bin/wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%-
+# bindsym XF86AudioRaiseVolume exec swayosd-client --output-volume 5
+# bindsym XF86AudioLowerVolume exec swayosd-client --output-volume -5
 
 # Brightness control
 bindsym XF86MonBrightnessUp exec brightnessctl set 10%+
 bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
+# bindsym XF86MonBrightnessUp  exec swayosd-client --brightness +10
+# bindsym XF86MonBrightnessDown exec swayosd-client --brightness -10
 
 #
 # Status Bar:
@@ -242,7 +246,7 @@ bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     position top
-    font pango:monospace 16
+    font pango:monospace 12
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
@@ -284,6 +288,8 @@ exec systemctl --user start udiskie
 exec flatpak run dev.deedles.Trayscale --hide-window
 # nextcloud desktop client for file syncing
 exec flatpak run com.nextcloud.desktopclient.nextcloud
+# SwayOSD (On Screen Display) visual indicator for volume and birghtness
+# exec swayosd-server
 
 #
 # Systemd integration
