--- a/config
+++ b/config
@@ -72,6 +72,11 @@ input "type:touchpad" {
 input "type:pointer" {
     natural_scroll enabled
 }
+# input 1739:52839:SYNA8022:00_06CB:CE67_Touchpad {
+#     accel_profile flat # adaptive <-- other option
+#     pointer_accel 1.0 # between -1.0 and 1.0 inclusive
+# }
+
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
