--- a/config
+++ b/config
@@ -110,7 +110,7 @@ input "type:pointer" {
     # Screenshot a region
     bindsym Print exec grim -g "$(slurp)" $HOME/pictures/screenshots/$(date +'%Y-%m-%d_%H.%M.%S.png')
     # Screenshot the whole screen
-    bindsym Shift+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')
+    bindsym $mod+Shift+p exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') $HOME/pictures/screenshots/$(date +'%Y-%m-%d_%H.%M.%S.png')
 
     # Lock screen
     bindsym Mod4+l exec swaylock -f -c 000000
